Use OAuth2 protocol 2.0 by default
Ubuntu 22.04.4 evolution-ews 3.44.0-1 gnome-online-accounts 3.44.0-1ubuntu1
Earlier I could add outlook.com to gnome calendar with exchange in Gnome online accounts and evolution-ews installed, now Microsoft has changed something and it does not authenticate anymore..
attached screenshots with the error messages.
Edited by Alexander Vinbæk Strand