I#264 - Use OAuth2 protocol 2.0 by default

Closes https://gitlab.gnome.org/GNOME/evolution-ews/-/issues/264